# gemini-from-scratch

./: .gitignore  CLAUDE.md  README.md  environment.yml  project_structure.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
configs/: cpu_quick.yaml  large_model.yaml  medium_model.yaml  small_model.yaml
data/samples/: metadata.json
demos/: attention_visualizer.py  chat_interface.py
docs/: additional_resources.md  installation.md  paper_references.md  troubleshooting.md  workshop_guide.md
notebooks/: 00_setup_and_verification.ipynb
notebooks/part1_evolution/: 01_rnn_limitations_solution.ipynb  01_rnn_limitations_starter.ipynb
notebooks/part2_fundamentals/: 02_attention_mechanism_solution.ipynb  02_attention_mechanism_starter.ipynb  03_multihead_attention_solution.ipynb  03_multihead_attention_starter.ipynb  04_positional_encoding_solution.ipynb  04_positional_encoding_starter.ipynb  05_feedforward_network_solution.ipynb  05_feedforward_network_starter.ipynb  06_transformer_block_solution.ipynb  06_transformer_block_starter.ipynb
notebooks/part3_innovations/: 07_efficient_attention_solution.ipynb  07_efficient_attention_starter.ipynb  08_mixture_of_experts_solution.ipynb  08_mixture_of_experts_starter.ipynb  09_multimodal_fusion_solution.ipynb  09_multimodal_fusion_starter.ipynb
notebooks/part4_training/: 10_tokenization_solution.ipynb  10_tokenization_starter.ipynb  11_training_loop_solution.ipynb  11_training_loop_starter.ipynb  12_text_generation_solution.ipynb  12_text_generation_starter.ipynb
notebooks/part5_integration/: 13_mini_gemini_project.ipynb  14_advanced_extensions.ipynb
scripts/: __init__.py  benchmark.py  chat.py  download_data.py  evaluate.py  generate.py  train.py  verify_setup.py
src/: __init__.py
src/data/: __init__.py  dataloader.py  dataset.py  (+2 more)
tests/: __init__.py  conftest.py  test_advanced.py  test_data.py  test_models.py  test_utils.py
(+25 files in other folders)
